@@ -246,6 +246,13 @@ $wgIgnoredMessages = array(
 	'tags-summary',
 	'comparepages-summary',
 	'resettokens-summary',
+	'version-db-mysql-url',
+	'version-db-mariadb-url',
+	'version-db-percona-url',
+	'version-db-postgres-url',
+	'version-db-oracle-url',
+	'version-db-sqlite-url',
+	'version-db-mssql-url',
 	'version-entrypoints-index-php',
 	'version-entrypoints-api-php',
 	'version-entrypoints-load-php',
