@@ -3685,6 +3685,13 @@ $wgMessageStructure = array(
 		'version-software',
 		'version-software-product',
 		'version-software-version',
+		'version-db-mysql-url',
+		'version-db-mariadb-url',
+		'version-db-percona-url',
+		'version-db-postgres-url',
+		'version-db-oracle-url',
+		'version-db-sqlite-url',
+		'version-db-mssql-url',
 		'version-entrypoints',
 		'version-entrypoints-header-entrypoint',
 		'version-entrypoints-header-url',
